--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     </div>
 
-    <div class="site-body">
+    <div class="site-body shadow-1">
        <nav id="navbar" class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
