--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     </div>
 
-    <div class="site-body shadow-1">
+    <div class="site-body shadow-3">
        <nav id="navbar" class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -34,33 +34,39 @@
             </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <!--<li><a href="#">Link</a></li>-->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Navigation <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Music</a></li>
-                  <!--<li role="separator" class="divider"></li>-->
-                  <li><a href="#">News</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-              </li>
+              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="media.html">Music</a></li>
+              <li><a href="schedule.html">Schedule</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
-
         </div>
       </nav> 
+      <div class="jumbotron"></div>
+      <div class="container">
+        <article>
+          <h1>About Ivy</h1>
+          <hr/>
+          <p><span class="first-char">I</span>vy Ringel is an emerging young bassoonist who is passionate about solo, chamber and orchestral performing. This year, Ivy was named a winner of the Yamaha Young Artist competition, and will be performing at the Music For All Symposium in June 2016. In 2014, Ivy won the grand prize at the Meg Quigley Vivaldi Competition, an international solo competition for young female bassoonists, and is the youngest winner in the history of the competition. Her solo performances include playing the Hummel Concerto in F Major with the Eastman Philharmonia as the winner of the Eastman School of Music’s 2015 concerto competition. Her current work includes performing as a substitute bassoonist with the Buffalo Philharmonic Orchestra, Rochester Philharmonic Orchestra and Symphoria.
+         <br>
+         <br>
+         Contemporary music is another passion of Ivy’s, frequently performing with Eastman’s award-winning Musica Nova and Ossia. Ivy’s chamber music interests led her to tour Europe with the Eastman Wind Ensemble’s Harmonie in 2016. She also is a founding member of The Eclectet, a woodwind quintet formed in 2012 at Eastman. The Eclectet performs frequently at Eastman and in the Rochester community. They are committed to educational outreach, performing in the Museum of Play, the George Eastman House and other Rochester landmarks. Recent awards include being semifinalists in the 2015 Plowman Chamber Music Competition, a Messinger Ambassadors outreach grant, and Eastman’s Celentano award for excellence in chamber music. 
+         <br>
+         <br>
+         Ivy began her musical life at age 5 as a violinist. She later switched to the bassoon, beginning her bassoon study at age 12 in her hometown of Hillsborough, North Carolina. Ivy has had further studies with Michael Burns, Judith LeClair, Charlie Bailey, and Jeff Robinson. Ivy graduated from the Eastman School of Music this spring where she studied with John Hunt. This fall, Ivy is beginning her Master’s degree at Rice University studying with Benjamin Kamins.
+        </article>
+      </div>
+
+      <footer id="footer" class="navbar navbar-default">
+      
+      </footer>
     </div>
+
+
   </div>
 
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script>
-    $(document).ready(function(){
-      $('.jumbotron').css({'height': window.innerHeight});
-    })
-  </script>
 </body>
 </html>
