Scaffold contact and schedules

--- a/schedule.html
+++ b/schedule.html
@@ -42,6 +42,131 @@
           </div>
         </div>
       </nav> 
+      <div class="container">
+        <h1>Upcoming Events</h1>
+        <hr>
+        <table class="table table-bordered table-striped">
+          <thead>
+            <tr>
+              <td>Event</td>
+              <td>Place</td>
+              <td>Date</td>
+              <td>Time</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+          </tbody>
+        </table>
+
+      <h1>Past Events</h1>
+      <hr>
+
+      <table class="table table-bordered table-striped">
+          <thead>
+            <tr>
+              <td>Event</td>
+              <td>Place</td>
+              <td>Date</td>
+              <td>Time</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+            <tr>
+              <td>Some Event Name</td>
+              <td>West End Conservatory</td>
+              <td>6-02-2016</td>
+              <td>6:30-8:30</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <footer id="footer">
+      
+      </footer>
     </div>
   </div>
 
