--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
   <!--<link rel="stylesheet" href="https://bootswatch.com/2/flatly/bootstrap.min.css">-->
   <link href="https://fonts.googleapis.com/css?family=Arimo|Crimson+Text|Droid+Sans|Droid+Serif" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
 
@@ -42,6 +43,37 @@
           </div>
         </div>
       </nav> 
+
+      <div class="container">
+        
+        <article>
+          <h1>Contact Me</h1>
+          <hr>
+          <form action="submit">
+            <div class="form-group">
+              <label for="inputEmail">Email</label>
+              <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <label for="inputSubject">Subject</label>
+              <input type="password" class="form-control" id="inputSubject" placeholder="Subject">
+            </div>
+            <div class="form-group">
+              <label for="inputMessage">Message</label>
+              <textarea class="form-control" id="inputMessage" rows="5" placeholder="Message"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">
+              Send
+              <span class="glyphicon glyphicon-send"></span>
+            </button>  
+          </form>
+        </article>
+
+      </div>
+
+      <footer id="footer" class="navbar navbar-default">
+      
+      </footer>
     </div>
   </div>
 
