More on media page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="theme-color" content="#5f9ea0">
   <title>Ivy Ringel</title>
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -35,7 +36,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
               <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="media.html">Music</a></li>
+              <li><a href="media.html">Media</a></li>
               <li><a href="schedule.html">Schedule</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
