--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="index.html">Home</a></li>
-              <li><a href="media.html">Music</a></li>
+              <li><a href="media.html">Media</a></li>
               <li><a href="schedule.html">Schedule</a></li>
               <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
