--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Ivy Ringel</a>
+              <a class="navbar-brand" href="index.html">Ivy Ringel</a>
             </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
@@ -60,7 +60,7 @@
             </div>
             <div class="form-group">
               <label for="inputMessage">Message</label>
-              <textarea class="form-control" id="inputMessage" rows="5" placeholder="Message"></textarea>
+              <textarea class="form-control" id="inputMessage" rows="10" placeholder="Message"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">
               Send
@@ -71,8 +71,19 @@
 
       </div>
 
-      <footer id="footer" class="navbar navbar-default">
+      <footer id="footer" class="navbar navbar-default container-fluid">
       
+        <div class="row">
+          <div class="col-sm-6 col-xs-12 footer-col footer-author">
+            Made with by &#10084; <a href="http://zacharyfmarion.github.io">Zachary Marion</a>
+          </div>
+          <div class="col-sm-6 col-xs-12 footer-col footer-links">
+            <a href="index.html" class="footer-link">Home</a> /
+            <a href="media.html" class="footer-link">Media</a> /
+            <a href="schedule.html" class="footer-link">Schedule</a> /
+            <a href="contact.html" class="footer-link">Contact</a>
+          </div>
+        </div>     
       </footer>
     </div>
   </div>
