--- a/media.html
+++ b/media.html
@@ -38,7 +38,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Ivy Ringel</a>
+              <a class="navbar-brand" href="index.html">Ivy Ringel</a>
             </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
@@ -220,8 +220,19 @@
         
         </div>
       </div> <!-- Container -->
-      <footer id="footer">
+      <footer id="footer" class="navbar container-fluid">
       
+        <div class="row">
+          <div class="col-sm-6 col-xs-12 footer-col footer-author">
+            Made with by &#10084; <a href="http://zacharyfmarion.github.io">Zachary Marion</a>
+          </div>
+          <div class="col-sm-6 col-xs-12 footer-col footer-links">
+            <a href="index.html" class="footer-link">Home</a> /
+            <a href="media.html" class="footer-link">Media</a> /
+            <a href="schedule.html" class="footer-link">Schedule</a> /
+            <a href="contact.html" class="footer-link">Contact</a>
+          </div>
+        </div>     
       </footer>
     </div>
   </div>
