--- a/media.html
+++ b/media.html
@@ -50,6 +50,7 @@
           </div>
         </div>
       </nav> 
+      <div class="jumbotron"></div>
       <div class="container">
         <h1>Recordings</h1>
         <hr>
