--- a/schedule.html
+++ b/schedule.html
@@ -42,6 +42,7 @@
           </div>
         </div>
       </nav> 
+      <div class="jumbotron"></div>
       <div class="container">
         <h1>Upcoming Events</h1>
         <hr>
