Fix 'made with love'

--- a/media.html
+++ b/media.html
@@ -225,7 +225,7 @@
       
         <div class="row">
           <div class="col-sm-6 col-xs-12 footer-col footer-author">
-            Made with by &#10084; <a href="http://zacharyfmarion.github.io">Zachary Marion</a>
+            Made with &#10084; by <a href="http://zacharyfmarion.github.io">Zachary Marion</a>
           </div>
           <div class="col-sm-6 col-xs-12 footer-col footer-links">
             <a href="index.html" class="footer-link">Home</a> /
