--- a/media.html
+++ b/media.html
@@ -61,7 +61,7 @@
                 <span class="glyphicon glyphicon-play"></span>
               </button>
               <h4 class="panel-title">
-                Beethoven #5 or something
+               Composition Title
               </h4>
               <span class="time">5:31</span>
             </div>
@@ -77,7 +77,7 @@
                 <span class="glyphicon glyphicon-play"></span>
               </button>
               <h4 class="panel-title">
-                Beethoven #5 or something
+               Composition Title
               </h4>
               <span class="time">5:31</span>
             </div>
@@ -93,7 +93,7 @@
                 <span class="glyphicon glyphicon-play"></span>
               </button>
               <h4 class="panel-title">
-                Beethoven #5 or something
+               Composition Title
               </h4>
               <span class="time">5:31</span>
             </div>
