--- a/media.html
+++ b/media.html
@@ -56,9 +56,9 @@
         <h1>Recordings</h1>
         <hr>
 
-        <div class="harmonize"></div>
-        <div class="harmonize"></div>
-        <div class="harmonize"></div>
+        <div id="ravel" class="harmonize expand_to_medium"></div>
+        <div id="partita" class="harmonize expand_to_medium"></div>
+        <div id="hummel" class="harmonize"></div>
 
         <h1>Photos</h1>
         <hr>
