--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <article>
           <h1>Contact Me</h1>
           <hr>
-          <form action="https://formspree.io/zacharyfmarion@gmail.com" method="POST">
+          <form action="https://formspree.io/ivyringel@gmail.com" method="POST">
             <!--<div class="form-group">-->
               <!--<label for="inputName">Name</label>-->
               <!--<input type="text" class="form-control" id="inputName" placeholder="Name" name="name">-->
