Update bio and add video

--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
         <article>
           <h1>About Ivy</h1>
           <hr/>
-          <p><span class="first-char">I</span>vy Ringel is an emerging young bassoonist who is passionate about solo, chamber and orchestral performing. This year, Ivy was named a winner of the Yamaha Young Artist competition, and will be performing at the Music For All Symposium in June 2016. In 2014, Ivy won the grand prize at the Meg Quigley Vivaldi Competition, an international solo competition for young female bassoonists, and is the youngest winner in the history of the competition. Her solo performances include playing the Hummel Concerto in F Major with the Eastman Philharmonia as the winner of the Eastman School of Music’s 2015 concerto competition. Her current work includes performing as a substitute bassoonist with the Buffalo Philharmonic Orchestra, Rochester Philharmonic Orchestra and Symphoria.
-         <br>
-         <br>
-         Contemporary music is another passion of Ivy’s, frequently performing with Eastman’s award-winning Musica Nova and Ossia. Ivy’s chamber music interests led her to tour Europe with the Eastman Wind Ensemble’s Harmonie in 2016. She also is a founding member of The Eclectet, a woodwind quintet formed in 2012 at Eastman. The Eclectet performs frequently at Eastman and in the Rochester community. They are committed to educational outreach, performing in the Museum of Play, the George Eastman House and other Rochester landmarks. Recent awards include being semifinalists in the 2015 Plowman Chamber Music Competition, a Messinger Ambassadors outreach grant, and Eastman’s Celentano award for excellence in chamber music. 
-         <br>
-         <br>
-         Ivy began her musical life at age 5 as a violinist. She later switched to the bassoon, beginning her bassoon study at age 12 in her hometown of Hillsborough, North Carolina. Ivy has had further studies with Michael Burns, Judith LeClair, Charlie Bailey, and Jeff Robinson. Ivy graduated from the Eastman School of Music this spring where she studied with John Hunt. This fall, Ivy is beginning her Master’s degree at Rice University studying with Benjamin Kamins.
+          <p><span class="first-char">B</span>assoonist Ivy Ringel recently relocated to Houston, TX from Rochester, NY to begin her Master’s degree at Rice University, where she is studying with Benjamin Kamins. In 2014, Ivy won the grand prize at the Meg Quigley Vivaldi Competition, an international solo competition for young female bassoonists. Ivy is also a 2016 winner of the Yamaha Young Performing Artist competition and the Eastman School of Music’s 2015 concerto competition, where she performed the Hummel Concerto in F Major with the Eastman Philharmonia. Ivy’s orchestral work includes performances with the Rochester Philharmonic Orchestra, Buffalo Philharmonic Orchestra and Symphoria.
+<br>
+<br>
+Ivy’s chamber music interests led her to tour Europe with the Eastman Wind Ensemble’s Harmonie this summer. In previous summers, she has attended the Round Top Music Festival, Chautauqua Music Festival, and the Governor’s School of North Carolina. She also is a founding member of The Eclectet, a woodwind quintet formed in 2012. The Eclectet is committed to educational outreach, performing in the Museum of Play, the George Eastman House and other Rochester landmarks. Contemporary music is another passion of Ivy’s, frequently performing with Eastman’s Musica Nova, conducted by Brad Lubman, and Ossia, Eastman’s student-run contemporary music ensemble. 
+<br>
+<br>
+Ivy began her musical life at age 5 as a violinist. She later switched to the bassoon, beginning her bassoon study at age 12 in her hometown of Hillsborough, North Carolina. Ivy has had further studies with Kristin Wolfe Jensen, Michael Burns, and Jeff Robinson. This spring, Ivy graduated from the Eastman School of Music, where she studied with John Hunt and Charlie Bailey. Her other interests include cooking and attending live music shows of all genres.  
+          </p>
         </article>
       </div>
 
