--- a/media.html
+++ b/media.html
@@ -60,6 +60,13 @@
         <div id="partita" class="harmonize expand_to_medium"></div>
         <div id="hummel" class="harmonize"></div>
 
+        <h1>Videos</h1>
+        <hr>
+
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yfdsqPd4NCk" frameborder="0" allowfullscreen></iframe>
+        </div>
+
         <h1>Photos</h1>
         <hr>
 
